--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -5,6 +5,8 @@
         <title>Detail</title>
     </head>
     <body>
-        
+        <h1>{{ restaurant.name }}</h1>
+        <p>{{ restaurant.description }}</p>
+        <h3>open from:{{ restaurant.opening_time }} to {{ restaurant.closing_time }}</h3>
     </body>
 </html>
